--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "format-tree",
   "version": "1.0.4",
   "description": "Formats a tree structure into a string that can be printed",
-  "main": "lib/index.js",
+  "main": "dist/mod.js",
   "repository": "luvies/format-tree",
   "author": "luvies",
   "license": "MIT",
