--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "sourceMap": true,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     /* Redirect output structure to the directory. */
-    "outDir": "./lib",
+    "outDir": "./dist",
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "removeComments": true,                /* Do not emit comments to output. */
@@ -77,7 +77,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-    "src/**/*.ts"
+    "lib/**/*.ts"
   ],
   "exclude": [
     "node_modules"
