--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/node": "^10.9.4",
     "chalk": "^2.4.1",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {
