Dropped string-lengh dependency

--- a/package.json
+++ b/package.json
@@ -24,7 +24,5 @@
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.0.3"
   },
-  "dependencies": {
-    "string-length": "^2.0.0"
-  }
+  "dependencies": {}
 }
